# fuzzformer

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
include/fuzzformer/: asyncScheduler.h  eventLoop.h  fuzzyAttention.h  logger.h  metricsCollector.h  model.h  modelConfig.h  tensorUtils.h  timer.h  torchStub.h  transformerBlock.h  visualRenderer.h
src/: main.cpp
src/core/: fuzzyAttention.cpp  fuzzyAttention.cu  model.cpp  transformerBlock.cpp
src/runtime/: asyncScheduler.cpp  eventLoop.cpp  metricsCollector.cpp
src/utils/: logger.cpp  tensorUtils.cpp  timer.cpp
src/visual/: renderer.cpp  terminalHeatmap.cpp
tests/: benchmark_kernels.cpp  smoke.cpp  test_async_runtime.cpp  test_fuzzy_attention.cpp  test_metrics.cpp  test_model_inference.cpp  test_transformer_block.cpp  test_visualization.cpp  utils_test.cpp
